[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Scenes/Particles/RedParticles.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Particles/spark_01.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Particles/spark_03.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/Particles/spark_04.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/Particles/spark_02.png" type="Texture" id=5]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.810096 ), 0.0, 2.04434, 0, 0, Vector2( 0.303371, 1 ), -0.108784, -0.108784, 0, 0, Vector2( 1, 0.53125 ), -2.17832, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.204969, 1 )
colors = PoolColorArray( 1, 1, 1, 0.137255, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.810096 ), 0.0, 2.04434, 0, 0, Vector2( 0.303371, 1 ), -0.108784, -0.108784, 0, 0, Vector2( 1, 0.53125 ), -2.17832, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.204969, 1 )
colors = PoolColorArray( 1, 1, 1, 0.137255, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.810096 ), 0.0, 2.04434, 0, 0, Vector2( 0.303371, 1 ), -0.108784, -0.108784, 0, 0, Vector2( 1, 0.53125 ), -2.17832, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.204969, 1 )
colors = PoolColorArray( 1, 1, 1, 0.137255, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="RedParticles" type="Node2D"]
script = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 4
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 120, 120 )
gravity = Vector2( 0, 0 )
angle = 360.0
angle_random = 1.0
scale_amount = 0.2
scale_amount_random = 0.55
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
amount = 4
local_coords = false
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 120, 120 )
gravity = Vector2( 0, 0 )
angle = 360.0
angle_random = 1.0
scale_amount = 0.2
scale_amount_random = 0.55
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
amount = 4
local_coords = false
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 120, 120 )
gravity = Vector2( 0, 0 )
angle = 360.0
angle_random = 1.0
scale_amount = 0.2
scale_amount_random = 0.55
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="CPUParticles2D4" type="CPUParticles2D" parent="."]
amount = 4
local_coords = false
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 120, 120 )
gravity = Vector2( 0, 0 )
angle = 360.0
angle_random = 1.0
scale_amount = 0.2
scale_amount_random = 0.55
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 6 )
